# opentelemetry-lambda

./: .gitattributes  .gitignore  .gitmodules  .npmignore  .projenrc.js  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  buildspec.yml  cdktf.json  collector.go  go.mod  go.sum  main.go  main.ts  package-lock.json  package.json  pull_request_template.md  release.version  test-combined-layers.sh  tsconfig.dev.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  lychee.toml  params.yml  release.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: apply-dev.yml  build-collector.yml  build.yml  check-links.yaml  check_links_config.json  ci-collector.yml  ci-dotnet.yml  ci-gomod-auto-upgrade.yaml  ci-java.yml  ci-nodejs.yml  ci-python.yml  ci-shellcheck.yml  ci-terraform.yml  ci.yaml  close-stale.yaml  codeql.yml  e2e-python.yml  integration-test.yml  layer-publish.yml  ossf-scorecard.yml  plan-dev.yml  pr-python.yml  publish-layer-collector.yml  release-combined-layer-java.yml  release-combined-layer-nodejs.yml  release-combined-layer-python.yml  release-layer-collector.yml  release-layer-java.yml  release-layer-nodejs.yml  release-layer-python.yml  release-layer-ruby copy.yml  (+5 more)
.projen/: deps.json  tasks.json
collector/: Makefile  Makefile.Common  README.md  VERSION  collector.go  config.e2e.yaml  config.yaml  go.mod  go.sum  main.go  main_test.go  print.go  span_processor.go
devops/: DownloadLayer.yml
docs/: design_proposal.md
dotnet/: README.md
go/: README.md  build-combined.sh
integration-tests/: README.md  globalSetup.ts  package-lock.json  package.json  tsconfig.json  vitest.config.integration.ts  vitest.config.ts
java/: README.md  build-combined.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
lib/: core.ts  layerStack.ts
nodejs/: .gitignore  README.md  eslint.config.js  lerna.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.esm.json
python/: README.md
python/src/otel/: Dockerfile  Makefile  pyproject.toml  setup.cfg  setup.py
python/src/otel/otel_sdk/: nodeps-requirements.txt  otel-handler  otel-instrument  otel_wrapper.py  requirements-nodeps.txt  requirements.txt
python/src/otel/otel_sdk/opentelemetry/instrumentation/aws_lambda/: __init__.py  package.py
python/src/otel/otel_sdk/opentelemetry/resource/: __init__.py
python/src/otel/tests/: mock_lambda.py  nodeps-requirements.txt  requirements.txt  test-requirements.txt  test_aws_lambda_instrumentation-auto.py  test_handler.py  test_otel.py  test_wrapper.py
ruby/: README.md  build-combined.sh
tools/: cleanStacks.sh  cloneLayer.sh  integration.sh  layer.sh  publicLayers.sh  soaking.py  updateFunction.sh
utils/: instrumentation-layer-manager.sh
(+328 files in other folders)
