[project]
name = "otel"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-sdk==1.39.0",
    "opentelemetry-exporter-otlp-proto-http==1.39.0",
    "opentelemetry-distro==0.60b0",
    "opentelemetry-instrumentation==0.60b0",
    "opentelemetry-semantic-conventions==0.60b0",
    "opentelemetry-propagator-aws-xray==1.0.2",
]

[project.optional-dependencies]
test = [
    "opentelemetry-test-utils==0.60b0",
    "pytest"
]
dev = [
    "ruff>=0.8.0",
]
instrumentation = [
    "opentelemetry-instrumentation-aiohttp-client==0.60b0",
    "opentelemetry-util-http==0.60b0",
    "opentelemetry-instrumentation-asgi==0.60b0",
    "opentelemetry-instrumentation-asyncpg==0.60b0",
    "opentelemetry-instrumentation-aws-lambda==0.60b0",
    "opentelemetry-instrumentation-boto==0.60b0",
    "opentelemetry-instrumentation-botocore==0.60b0",
    "opentelemetry-instrumentation-boto3sqs==0.60b0",
    "opentelemetry-instrumentation-celery==0.60b0",
    "opentelemetry-instrumentation-dbapi==0.60b0",
    "opentelemetry-instrumentation-django==0.60b0",
    "opentelemetry-instrumentation-elasticsearch==0.60b0",
    "opentelemetry-instrumentation-fastapi==0.60b0",
    "opentelemetry-instrumentation-falcon==0.60b0",
    "opentelemetry-instrumentation-flask==0.60b0",
    "opentelemetry-instrumentation-grpc==0.60b0",
    "opentelemetry-instrumentation-jinja2==0.60b0",
    "opentelemetry-instrumentation-mysql==0.60b0",
    "opentelemetry-instrumentation-psycopg2==0.60b0",
    "opentelemetry-instrumentation-pymemcache==0.60b0",
    "opentelemetry-instrumentation-pymongo==0.60b0",
    "opentelemetry-instrumentation-pymysql==0.60b0",
    "opentelemetry-instrumentation-pyramid==0.60b0",
    "opentelemetry-instrumentation-redis==0.60b0",
    "opentelemetry-instrumentation-requests==0.60b0",
    "opentelemetry-instrumentation-sqlalchemy==0.60b0",
    "opentelemetry-instrumentation-sqlite3==0.60b0",
    "opentelemetry-instrumentation-starlette==0.60b0",
    "opentelemetry-instrumentation-tornado==0.60b0",
    "opentelemetry-instrumentation-wsgi==0.60b0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
